# VI-uminho

./: .gitignore
VI-RT/: CMakeLists.txt  MyImage.ppm  cornell_box.ppm  fgs.ppm  main.cpp
VI-RT.xcodeproj/: project.pbxproj
VI-RT.xcodeproj/project.xcworkspace/xcuserdata/psantos.xcuserdatad/: UserInterfaceState.xcuserstate
VI-RT.xcodeproj/xcuserdata/psantos.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
VI-RT.xcodeproj/xcuserdata/psantos.xcuserdatad/xcschemes/: xcschememanagement.plist
VI-RT/src/: CMakeLists.txt  main.cpp
VI-RT/src/3DSortingStruct/: AccelStruct.hpp
VI-RT/src/Camera/: camera.hpp  perspective.cpp  perspective.hpp
VI-RT/src/Image/: ImageEXR.cpp  ImageEXR.hpp  ImageJPG.cpp  ImageJPG.hpp  ImagePFM.cpp  ImagePFM.hpp  ImagePPM.cpp  ImagePPM.hpp  image.hpp
VI-RT/src/Light/: AmbientLight.hpp  AreaLight.hpp  PointLight.hpp  light.hpp
VI-RT/src/Output_Results/: ppm_output.ppm
VI-RT/src/Primitive/: BB.hpp  primitive.hpp
VI-RT/src/Primitive/BRDF/: BRDF.hpp  Phong.cpp  Phong.hpp
VI-RT/src/Primitive/Geometry/: geometry.hpp  mesh.cpp  mesh.hpp  triangle.cpp  triangle.hpp
VI-RT/src/Rays/: intersection.hpp  ray.hpp
VI-RT/src/Renderer/: StandardRenderer.cpp  StandardRenderer.hpp  renderer.hpp
VI-RT/src/Scene/: scene.cpp  scene.hpp
VI-RT/src/Shader/: AmbientShader.cpp  AmbientShader.hpp  DistributedShader.cpp  DistributedShader.hpp  PathTracerShader.cpp  PathTracerShader.hpp  WhittedShader.cpp  WhittedShader.hpp  shader.hpp
VI-RT/src/Shader/AmbientShader/: AmbientShader.cpp  AmbientShader.hpp
VI-RT/src/Shader/DistributedShader/: DistributedShader.cpp  DistributedShader.hpp
VI-RT/src/Shader/PathTracerShader/: PathTracerShader.cpp  PathTracerShader.hpp
VI-RT/src/Shader/WhittedShader/: WhittedShader.cpp  WhittedShader.hpp
VI-RT/src/utils/: AABB.cpp  AABB.hpp  RGB.hpp  vector.hpp
